--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: linz-postgresql-functions
 Section: database
 Priority: extra
-Build-Depends: debhelper (>= 7), postgresql-server-dev-9.3, postgresql-9.3-pgtap, postgresql-9.3-postgis-2.1
+Build-Depends: debhelper (>= 7), postgresql-server-dev-9.3, postgresql-9.3-pgtap, postgresql-9.3-postgis-2.2
 Maintainer: Jeremy Palmer (LINZ) <jpalmer@linz.govt.nz>
 Homepage: http://www.linz.govt.nz
 Vcs-Svn: git://github.com/linz/linz-postgresql-functions.git
@@ -9,7 +9,7 @@ Vcs-Browser: https://github.com/linz/linz-postgresql-functions
 
 Package: linz-postgresql-9.3-functions
 Architecture: all
-Depends: ${misc:Depends}, postgresql-9.3, postgresql-9.3-postgis-2.1
+Depends: ${misc:Depends}, postgresql-9.3, postgresql-9.3-postgis-2.2
 Recommends:
-Description: Miscellaneous postgresql functions from LINZ. 
+Description: Miscellaneous PostgreSQL functions from LINZ. 
 
