[debian] Adding support for multiple PostgreSQL/PostGIS versions

--- a/debian/control
+++ b/debian/control
@@ -2,10 +2,9 @@ Source: linz-postgresql-functions
 Section: database
 Priority: extra
 Build-Depends: debhelper (>= 7),
-               postgresql-server-dev-9.3,
-               postgresql-9.3-postgis-2.1|postgresql-9.3-postgis-2.2
+               postgresql-server-dev-all
 Standards-Version: 3.9.5
-Maintainer: Jeremy Palmer (LINZ) <jpalmer@linz.govt.nz>
+Maintainer: Ivan Mincik <imincik@linz.govt.nz>
 Homepage: http://www.linz.govt.nz
 Vcs-Git: git://github.com/linz/linz-postgresql-functions.git
 Vcs-Browser: https://github.com/linz/linz-postgresql-functions
@@ -14,7 +13,31 @@ Package: linz-postgresql-9.3-functions
 Architecture: all
 Depends: ${misc:Depends},
          postgresql-9.3,
-         postgresql-9.3-postgis-2.1|postgresql-9.3-postgis-2.2
+         postgresql-9.3-postgis-2.4|postgresql-9.3-postgis-2.3|postgresql-9.3-postgis-2.2|postgresql-9.3-postgis-2.1
+Recommends:
+Description: Miscellaneous PostgreSQL functions from LINZ.
+
+Package: linz-postgresql-9.4-functions
+Architecture: all
+Depends: ${misc:Depends},
+         postgresql-9.4,
+         postgresql-9.4-postgis-2.4|postgresql-9.4-postgis-2.3|postgresql-9.4-postgis-2.2|postgresql-9.4-postgis-2.1
+Recommends:
+Description: Miscellaneous PostgreSQL functions from LINZ.
+
+Package: linz-postgresql-9.5-functions
+Architecture: all
+Depends: ${misc:Depends},
+         postgresql-9.5,
+         postgresql-9.5-postgis-2.4|postgresql-9.5-postgis-2.3|postgresql-9.5-postgis-2.2|postgresql-9.5-postgis-2.1
+Recommends:
+Description: Miscellaneous PostgreSQL functions from LINZ.
+
+Package: linz-postgresql-9.6-functions
+Architecture: all
+Depends: ${misc:Depends},
+         postgresql-9.6,
+         postgresql-9.6-postgis-2.4|postgresql-9.6-postgis-2.3|postgresql-9.6-postgis-2.2|postgresql-9.6-postgis-2.1
 Recommends:
 Description: Miscellaneous PostgreSQL functions from LINZ.
 
